--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,8 @@ docker-compose*yml
 Dockerfiles
 elasticsearch
 elasticsearch-backup
+opensearch
+opensearch-backup
 malcolm-iso
 sensor-iso
 arkime-logs
