--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -92,13 +92,13 @@ x-logstash-variables: &logstash-variables
   LOGSTASH_OUI_LOOKUP       : 'true'
   LOGSTASH_SEVERITY_SCORING : 'true'
   LOGSTASH_REVERSE_DNS      : 'false'
-  # ES_EXTERNAL_HOSTS : '10.0.0.123:9200'
-  # ES_EXTERNAL_SSL : 'true'
-  # ES_EXTERNAL_SSL_CERTIFICATE_VERIFICATION : 'false'
-  # For security, ES_EXTERNAL_USER and ES_EXTERNAL_PASSWORD should be stored in Logstash keystore using ./scripts/auth_setup
+  # OS_EXTERNAL_HOSTS : '10.0.0.123:9200'
+  # OS_EXTERNAL_SSL : 'true'
+  # OS_EXTERNAL_SSL_CERTIFICATE_VERIFICATION : 'false'
+  # For security, OS_EXTERNAL_USER and OS_EXTERNAL_PASSWORD should be stored in Logstash keystore using ./scripts/auth_setup
   #   See also volume mount for logstash.keystore below.
-  # ES_EXTERNAL_USER : 'janedoe'
-  # ES_EXTERNAL_PASSWORD : 'secret'
+  # OS_EXTERNAL_USER : 'janedoe'
+  # OS_EXTERNAL_PASSWORD : 'secret'
 
 x-common-upload-variables: &common-upload-variables
   AUTO_TAG : 'true'
