--- a/logstash/pipelines/external/99_opensearch_output.conf
+++ b/logstash/pipelines/external/99_opensearch_output.conf
@@ -1,11 +1,11 @@
 output {
   elasticsearch {
-    id => "output_external_elasticsearch_arkime"
-    hosts => "${ES_EXTERNAL_HOSTS}"
-    ssl => "${ES_EXTERNAL_SSL:true}"
-    ssl_certificate_verification => "${ES_EXTERNAL_SSL_CERTIFICATE_VERIFICATION:false}"
-    user => "${ES_EXTERNAL_USER:}"
-    password => "${ES_EXTERNAL_PASSWORD:}"
+    id => "output_external_opensearch_arkime"
+    hosts => "${OS_EXTERNAL_HOSTS}"
+    ssl => "${OS_EXTERNAL_SSL:true}"
+    ssl_certificate_verification => "${OS_EXTERNAL_SSL_CERTIFICATE_VERIFICATION:false}"
+    user => "${OS_EXTERNAL_USER:}"
+    password => "${OS_EXTERNAL_PASSWORD:}"
     manage_template => false
     index => "arkime_sessions3-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{malcolmDocId}"
