--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -30,8 +30,8 @@ redirect_stderr=true
 command=python3 /usr/local/bin/pcap_watcher.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
-  --elasticsearch "%(ENV_OPENSEARCH_URL)s"
-  --elasticsearch-wait
+  --opensearch "%(ENV_OPENSEARCH_URL)s"
+  --opensearch-wait
   --arkime-node arkime
   --ignore-existing "%(ENV_PCAP_PIPELINE_IGNORE_PREEXISTING)s"
   --start-sleep 60
