--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -136,6 +136,7 @@ services:
     environment:
       << : *process-variables
       logger.level : 'WARN'
+      # see https://opensearch.org/docs/latest/clients/agents-and-ingestion-tools/index/
       compatibility.override_main_response_version: 'true'
       bootstrap.memory_lock : 'true'
       OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
