use opensearch-provided base image for docker logstash

--- a/logstash/pipelines/external/99_opensearch_output.conf
+++ b/logstash/pipelines/external/99_opensearch_output.conf
@@ -1,5 +1,5 @@
 output {
-  elasticsearch {
+  opensearch {
     id => "output_external_opensearch_arkime"
     hosts => "${OS_EXTERNAL_HOSTS}"
     ssl => "${OS_EXTERNAL_SSL:true}"
