--- a/logstash/pipelines/external/01_input_external_es.conf
+++ b/logstash/pipelines/external/01_input_external_es.conf
@@ -1,6 +1,6 @@
 input {
   pipeline {
-    address => "${OPENSEARCH_PIPELINE_ADDRESS_EXTERNAL:external-es}"
+    address => "${OPENSEARCH_PIPELINE_ADDRESS_EXTERNAL:external-os}"
   }
 }
 
