--- a/logstash/pipelines/output/01_input_internal_es.conf
+++ b/logstash/pipelines/output/01_input_internal_es.conf
@@ -1,6 +1,6 @@
 input {
   pipeline {
-    address => "${OPENSEARCH_PIPELINE_ADDRESS_INTERNAL:internal-es}"
+    address => "${OPENSEARCH_PIPELINE_ADDRESS_INTERNAL:internal-os}"
   }
 }
 
