--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,7 +128,7 @@ http {
     }
 
     # Arkime -> Dashboards shortcut
-    location ~* ^/idark2kib(.*) {
+    location ~* ^/idark2dash(.*) {
 
       set $filter_start_time now-1d;
       if ($arg_start != '') {
@@ -150,15 +150,15 @@ http {
         set $filter_value $arg_value;
       }
 
-      rewrite ^/idark2kib/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
+      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
       proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
     }
 
     # Dashboards -> Arkime shortcut
-    location ~* /idkib2ark/(.*) {
-      rewrite ^.*/idkib2ark/(.*) /sessions?expression=($1) redirect;
+    location ~* /iddash2ark/(.*) {
+      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
@@ -244,8 +244,8 @@ http {
     }
 
     # Dashboards -> Arkime shortcut
-    location ~* /idkib2ark/(.*) {
-      rewrite ^.*/idkib2ark/(.*) /sessions?expression=($1) redirect;
+    location ~* /iddash2ark/(.*) {
+      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
