--- a/.github/workflows/logstash-build-and-push-ghcr.yml
+++ b/.github/workflows/logstash-build-and-push-ghcr.yml
@@ -10,6 +10,7 @@ on:
       - 'logstash/**'
       - 'Dockerfiles/logstash.Dockerfile'
       - 'shared/bin/*'
+      - '.trigger_workflow_build'
   workflow_dispatch:
   repository_dispatch:
 
