added support for OSPF analyzer

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -720,6 +720,35 @@ zeek.ocsp.revokereason=db:zeek.ocsp.revokereason;group:zeek_ocsp;kind:termfield;
 zeek.ocsp.thisUpdate=db:zeek.ocsp.thisUpdate;group:zeek_ocsp;kind:termfield;friendly:Update Time;help:Update Time
 zeek.ocsp.nextUpdate=db:zeek.ocsp.nextUpdate;group:zeek_ocsp;kind:termfield;friendly:Next Update Time;help:Next Update Time
 
+# ospf.log
+# https://github.com/corelight/zeek-spicy-ospf
+zeek.ospf.ospf_type=db:zeek.ospf.ospf_type;group:zeek_ospf;kind:termfield;friendly:OSPF Packet Type;help:OSPF Packet Type
+zeek.ospf.version=db:zeek.ospf.version;group:zeek_ospf;kind:integer;friendly:OSPF Version;help:OSPF Version
+zeek.ospf.router_id=db:zeek.ospf.router_id;group:zeek_ospf;kind:termfield;friendly:Router ID;help:Router ID
+zeek.ospf.area_id=db:zeek.ospf.area_id;group:zeek_ospf;kind:termfield;friendly:Area ID;help:Area ID
+zeek.ospf.interface_id=db:zeek.ospf.interface_id;group:zeek_ospf;kind:integer;friendly:Interface ID;help:Interface ID
+zeek.ospf.netmask=db:zeek.ospf.netmask;group:zeek_ospf;kind:termfield;friendly:Netmask;help:Netmask
+zeek.ospf.desig_router=db:zeek.ospf.desig_router;group:zeek_ospf;kind:termfield;friendly:Designated Router;help:Designated Router
+zeek.ospf.backup_router=db:zeek.ospf.backup_router;group:zeek_ospf;kind:termfield;friendly:Backup Router;help:Backup Router
+zeek.ospf.neighbors=db:zeek.ospf.neighbors;group:zeek_ospf;kind:termfield;friendly:Neighbors;help:Neighbors
+zeek.ospf.lsa_type=db:zeek.ospf.lsa_type;group:zeek_ospf;kind:termfield;friendly:LSA Type;help:LSA Type
+zeek.ospf.link_state_id=db:zeek.ospf.link_state_id;group:zeek_ospf;kind:termfield;friendly:Link State ID;help:Link State ID
+zeek.ospf.advert_router=db:zeek.ospf.advert_router;group:zeek_ospf;kind:termfield;friendly:Router Advertisement;help:Router Advertisement
+zeek.ospf.routers=db:zeek.ospf.routers;group:zeek_ospf;kind:termfield;friendly:Router (Network LSA);help:Router (Network LSA)
+zeek.ospf.link_id=db:zeek.ospf.link_id;group:zeek_ospf;kind:termfield;friendly:Link ID (Router LSA);help:Link ID (Router LSA)
+zeek.ospf.link_data=db:zeek.ospf.link_data;group:zeek_ospf;kind:termfield;friendly:Link Data (Router LSA);help:Link Data (Router LSA)
+zeek.ospf.link_type=db:zeek.ospf.link_type;group:zeek_ospf;kind:termfield;friendly:Link Type (Router LSA);help:Link Type (Router LSA)
+zeek.ospf.neighbor_router_id=db:zeek.ospf.neighbor_router_id;group:zeek_ospf;kind:termfield;friendly:Neighbor Router ID (Router LSA);help:Neighbor Router ID (Router LSA)
+zeek.ospf.metrics=db:zeek.ospf.metrics;group:zeek_ospf;kind:integer;friendly:Metrics (External LSA);help:Metrics (External LSA)
+zeek.ospf.fwd_addrs=db:zeek.ospf.fwd_addrs;group:zeek_ospf;kind:termfield;friendly:Forward Address (External LSA);help:Forward Address (External LSA)
+zeek.ospf.route_tags=db:zeek.ospf.route_tags;group:zeek_ospf;kind:integer;friendly:Route Tags (External LSA);help:Route Tags (External LSA)
+zeek.ospf.neighbor_interface_id=db:zeek.ospf.neighbor_interface_id;group:zeek_ospf;kind:integer;friendly:Neighbor Interface ID (External LSA);help:Neighbor Interface ID (External LSA)
+zeek.ospf.prefix=db:zeek.ospf.prefix;group:zeek_ospf;kind:integer;friendly:Prefix (External LSA);help:Prefix (External LSA)
+zeek.ospf.metric=db:zeek.ospf.metric;group:zeek_ospf;kind:termfield;friendly:Metric (IA Router);help:Metric (IA Router)
+zeek.ospf.dest_router_id=db:zeek.ospf.dest_router_id;group:zeek_ospf;kind:termfield;friendly:Destination Router ID (IA Router);help:Destination Router ID (IA Router)
+zeek.ospf.link_prefixes=db:zeek.ospf.link_prefixes;group:zeek_ospf;kind:termfield;friendly:Link Prefix;help:Link Prefix
+zeek.ospf.intra_prefixes=db:zeek.ospf.intra_prefixes;group:zeek_ospf;kind:termfield;friendly:Intra Prefix;help:Intra Prefix
+
 # pe.log
 # https://docs.zeek.org/en/stable/scripts/base/files/pe/main.zeek.html#type-PE::Info
 zeek.pe.machine=db:zeek.pe.machine;group:zeek_pe;kind:termfield;friendly:Target Machine;help:Target Machine
@@ -1225,6 +1254,7 @@ zeek_notice=require:zeek.notice;title:Zeek notice.log;fields:zeek.notice.file_mi
 zeek_ntlm=require:zeek.ntlm;title:Zeek ntlm.log;fields:zeek.ntlm.host,zeek.ntlm.domain,zeek.ntlm.success,zeek.ntlm.status,zeek.ntlm.server_nb_computer,zeek.ntlm.server_dns_computer,zeek.ntlm.server_tree
 zeek_ntp=require:zeek.ntp;title:Zeek ntp.log;fields:zeek.ntp.version,zeek.ntp.mode,zeek.ntp.mode_str,zeek.ntp.stratum,zeek.ntp.poll,zeek.ntp.precision,zeek.ntp.root_delay,zeek.ntp.root_disp,zeek.ntp.ref_id,zeek.ntp.ref_time,zeek.ntp.org_time,zeek.ntp.rec_time,zeek.ntp.xmt_time,zeek.ntp.num_exts
 zeek_ocsp=require:zeek.ocsp;title:Zeek ocsp.log;fields:zeek.ocsp.hashAlgorithm,zeek.ocsp.issuerNameHash,zeek.ocsp.issuerKeyHash,zeek.ocsp.serialNumber,zeek.ocsp.certStatus,zeek.ocsp.revoketime,zeek.ocsp.revokereason,zeek.ocsp.thisUpdate,zeek.ocsp.nextUpdate
+zeek_ospf=require:zeek.ospf;title:Zeek ospf.log;fields:zeek.ospf.ospf_type,zeek.ospf.version,zeek.ospf.router_id,zeek.ospf.area_id,zeek.ospf.interface_id,zeek.ospf.netmask,zeek.ospf.desig_router,zeek.ospf.backup_router,zeek.ospf.neighbors,zeek.ospf.lsa_type,zeek.ospf.link_state_id,zeek.ospf.advert_router,zeek.ospf.routers,zeek.ospf.link_id,zeek.ospf.link_data,zeek.ospf.link_type,zeek.ospf.neighbor_router_id,zeek.ospf.metrics,zeek.ospf.fwd_addrs,zeek.ospf.route_tags,zeek.ospf.neighbor_interface_id,zeek.ospf.prefix,zeek.ospf.metric,zeek.ospf.dest_router_id,zeek.ospf.link_prefixes,zeek.ospf.intra_prefixes
 zeek_pe=require:zeek.pe;title:Zeek pe.log;fields:zeek.pe.machine,zeek.pe.compile_ts,zeek.pe.os,zeek.pe.subsystem,zeek.pe.is_exe,zeek.pe.is_64bit,zeek.pe.uses_aslr,zeek.pe.uses_dep,zeek.pe.uses_code_integrity,zeek.pe.uses_seh,zeek.pe.has_import_table,zeek.pe.has_export_table,zeek.pe.has_cert_table,zeek.pe.has_debug_data,zeek.pe.section_names
 zeek_profinet=require:zeek.profinet;title:Zeek profinet.log;fields:zeek.profinet.operation_type,zeek.profinet.block_version,zeek.profinet.slot_number,zeek.profinet.subslot_number,zeek.profinet.index
 zeek_profinet_dce_rpc=require:zeek.profinet_dce_rpc;title:Zeek profinet_dce_rpc.log;fields:zeek.profinet_dce_rpc.version,zeek.profinet_dce_rpc.packet_type,zeek.profinet_dce_rpc.object_uuid,zeek.profinet_dce_rpc.interface_uuid,zeek.profinet_dce_rpc.activity_uuid,zeek.profinet_dce_rpc.server_boot_time,zeek.profinet_dce_rpc.operation
