--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -26,6 +26,9 @@ filter {
   if ([zeek][ntp][version])                      { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
                                                            merge => { "[network][protocol_version]" => "[zeek][ntp][version]" } } }
 
+  if ([zeek][ospf][version])                      { mutate { id => "mutate_merge_normalize_zeek_ospf_version"
+                                                             merge => { "[network][protocol_version]" => "[zeek][ospf][version]" } } }
+
   if ([zeek][profinet][block_version])           { mutate { id => "mutate_merge_normalize_zeek_profinet_block_version"
                                                            merge => { "[network][protocol_version]" => "[zeek][profinet][block_version]" } } }
 
@@ -261,6 +264,9 @@ filter {
 
   if ([zeek][ntp][mode_str])                     { mutate { id => "mutate_merge_normalize_zeek_ntp_mode_str"
                                                            merge => { "[event][action]" => "[zeek][ntp][mode_str]" } } }
+
+  if ([zeek][ospf][ospf_type])                   { mutate { id => "mutate_merge_normalize_zeek_ospf_ospf_type"
+                                                            merge => { "[event][action]" => "[zeek][ospf][ospf_type]" } } }
 
   if ([zeek][profinet][operation_type])          { mutate { id => "mutate_merge_normalize_zeek_profinet_operation_type"
                                                            merge => { "[event][action]" => "[zeek][profinet][operation_type]" } } }
@@ -1059,33 +1065,55 @@ filter {
   # IP addresses ######################################################################################################
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
   if ([zeek][dhcp][assigned_ip]) {              mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_assigned_ip"
-                                                        merge => { "[related][ip]" => "[zeek][dhcp][assigned_ip]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][dhcp][assigned_ip]" } } }
   if ([zeek][dhcp][requested_ip]) {             mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_requested_ip"
-                                                        merge => { "[related][ip]" => "[zeek][dhcp][requested_ip]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][dhcp][requested_ip]" } } }
   if ([zeek][files][rx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_rx_hosts"
-                                                        merge => { "[related][ip]" => "[zeek][files][rx_hosts]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][files][rx_hosts]" } } }
   if ([zeek][files][tx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_tx_hosts"
-                                                        merge => { "[related][ip]" => "[zeek][files][tx_hosts]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][files][tx_hosts]" } } }
   if ([zeek][ftp][data_channel_orig_h]) {       mutate { id => "mutate_merge_field_related_ip_zeek_ftp_data_channel_orig_h"
-                                                        merge => { "[related][ip]" => "[zeek][ftp][data_channel_orig_h]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][ftp][data_channel_orig_h]" } } }
   if ([zeek][ftp][data_channel_resp_h]) {       mutate { id => "mutate_merge_field_related_ip_zeek_ftp_data_channel_resp_h"
-                                                        merge => { "[related][ip]" => "[zeek][ftp][data_channel_resp_h]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][ftp][data_channel_resp_h]" } } }
   if ([zeek][notice][dst]) {                    mutate { id => "mutate_merge_field_related_ip_zeek_notice_dst"
-                                                        merge => { "[related][ip]" => "[zeek][notice][dst]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][notice][dst]" } } }
   if ([zeek][notice][src]) {                    mutate { id => "mutate_merge_field_related_ip_zeek_notice_src"
-                                                        merge => { "[related][ip]" => "[zeek][notice][src]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][notice][src]" } } }
+  if ([zeek][ospf][router_id]) {                mutate { id => "mutate_merge_field_related_ip_zeek_ospf_router_id"
+                                                          merge => { "[related][ip]" => "[zeek][ospf][router_id]" } } }
+  if ([zeek][ospf][desig_router]) {             mutate { id => "mutate_merge_field_related_ip_zeek_ospf_desig_router"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][desig_router]" } } }
+  if ([zeek][ospf][backup_router]) {            mutate { id => "mutate_merge_field_related_ip_zeek_ospf_backup_router"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][backup_router]" } } }
+  if ([zeek][ospf][neighbors]) {                mutate { id => "mutate_merge_field_related_ip_zeek_ospf_neighbors"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][neighbors]" } } }
+  if ([zeek][ospf][advert_router]) {            mutate { id => "mutate_merge_field_related_ip_zeek_ospf_advert_router"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][advert_router]" } } }
+  if ([zeek][ospf][routers]) {                  mutate { id => "mutate_merge_field_related_ip_zeek_ospf_routers"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][routers]" } } }
+  if ([zeek][ospf][link_id]) {                  mutate { id => "mutate_merge_field_related_ip_zeek_ospf_link_id"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][link_id]" } } }
+  if ([zeek][ospf][link_data]) {                mutate { id => "mutate_merge_field_related_ip_zeek_ospf_link_data"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][link_data]" } } }
+  if ([zeek][ospf][neighbor_router_id]) {       mutate { id => "mutate_merge_field_related_ip_zeek_ospf_neighbor_router_id"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][neighbor_router_id]" } } }
+  if ([zeek][ospf][fwd_addrs]) {                mutate { id => "mutate_merge_field_related_ip_zeek_ospf_fwd_addrs"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][fwd_addrs]" } } }
+  if ([zeek][ospf][dest_router_id]) {           mutate { id => "mutate_merge_field_related_ip_zeek_ospf_dest_router_id"
+                                                         merge => { "[related][ip]" => "[zeek][ospf][dest_router_id]" } } }
   if ([zeek][radius][framed_addr]) {            mutate { id => "mutate_merge_field_related_ip_zeek_radius_framed_addr"
-                                                        merge => { "[related][ip]" => "[zeek][radius][framed_addr]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][radius][framed_addr]" } } }
   if ([zeek][smtp][path]) {                     mutate { id => "mutate_merge_field_related_ip_zeek_smtp_path"
-                                                        merge => { "[related][ip]" => "[zeek][smtp][path]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][smtp][path]" } } }
   if ([zeek][smtp][x_originating_ip]) {         mutate { id => "mutate_merge_field_related_ip_zeek_smtp_x_originating_ip"
-                                                        merge => { "[related][ip]" => "[zeek][smtp][x_originating_ip]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][smtp][x_originating_ip]" } } }
   if ([zeek][socks][bound_host]) {              mutate { id => "mutate_merge_field_related_ip_zeek_socks_bound_host"
-                                                        merge => { "[related][ip]" => "[zeek][socks][bound_host]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][socks][bound_host]" } } }
   if ([zeek][socks][request_host]) {            mutate { id => "mutate_merge_field_related_ip_zeek_socks_request_host"
-                                                        merge => { "[related][ip]" => "[zeek][socks][request_host]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][socks][request_host]" } } }
   if ([zeek][stun_nat][wan_addr]) {             mutate { id => "mutate_merge_field_related_ip_zeek_stun_nat_wan_addr"
-                                                        merge => { "[related][ip]" => "[zeek][stun_nat][wan_addr]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][stun_nat][wan_addr]" } } }
   if ([zeek][stun_nat][lan_addr]) {             mutate { id => "mutate_merge_field_related_ip_zeek_stun_nat_lan_addr"
-                                                        merge => { "[related][ip]" => "[zeek][stun_nat][lan_addr]" } } }
+                                                         merge => { "[related][ip]" => "[zeek][stun_nat][lan_addr]" } } }
 }
