--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -78,6 +78,12 @@ filter {
       "[zeek][ntp][root_delay]" => "float"
       "[zeek][ntp][root_disp]" => "float"
       "[zeek][ntp][version]" => "integer"
+      "[zeek][ospf][version]" => "integer"
+      "[zeek][ospf][interface_id]" => "integer"
+      "[zeek][ospf][metrics]" => "integer"
+      "[zeek][ospf][route_tags]" => "integer"
+      "[zeek][ospf][neighbor_interface_id]" => "integer"
+      "[zeek][ospf][prefix]" => "integer"
       "[zeek][s7comm][item_count]" => "integer"
       "[zeek][signatures][host_count]" => "integer"
       "[zeek][signatures][signature_count]" => "integer"
