--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -293,7 +293,7 @@ http {
     location / {
       proxy_pass http://opensearch;
       proxy_redirect off;
-      proxy_set_header Host es.malcolm.local;
+      proxy_set_header Host os.malcolm.local;
       client_max_body_size 50m;
     }
   }
