when building, don't use ssh-agent to communicate with vagrant

--- a/sensor-iso/vagrant/Vagrantfile
+++ b/sensor-iso/vagrant/Vagrantfile
@@ -17,6 +17,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "bento/debian-11"
 
   config.vm.network "private_network", type: "dhcp"
+  config.ssh.config = "ssh_config"
 
   config.vm.synced_folder '.', '/vagrant', disabled: true
   config.vm.synced_folder "..", "/sensor-build", type: "sshfs", disabled: false
